# AgentScope

./: .gitignore  README.md
backend/: pyproject.toml
backend/app/: main.py
backend/app/api/: evals.py  router.py  traces.py
backend/app/core/: config.py  database.py  eval_runner.py
backend/app/models/: __init__.py  eval_case.py  eval_report.py  step.py  trace.py
backend/app/schemas/: __init__.py  eval.py  trace.py
docs/superpowers/plans/: 2026-06-07-agent-scope-implementation.md  phase0-init.md  phase1-tracer.md  phase2-evaluator.md  phase3-sdk-polish.md
docs/superpowers/specs/: 2026-06-07-agent-scope-design.md
examples/: demo_openai.py  demo_tracer.py  sample_cases.json
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  index.css
frontend/src/api/: client.ts  evals.ts  traces.ts
frontend/src/components/eval/: CaseEditor.tsx  CaseList.tsx  RadarChart.tsx  ReportView.tsx  RunPanel.tsx
frontend/src/components/layout/: Layout.tsx  Sidebar.tsx
frontend/src/components/tracer/: StepDetail.tsx  StepNode.tsx  Timeline.tsx  TraceList.tsx
frontend/src/hooks/: useKeyboard.ts  useToast.ts
frontend/src/pages/: Dashboard.tsx  EvaluatorPage.tsx  TracerPage.tsx
frontend/src/stores/: evalStore.ts  traceStore.ts
sdk/: pyproject.toml
sdk/agent_scope/: __init__.py  client.py  decorators.py  openai_wrapper.py
